--- a/iron-comments/index.html
+++ b/iron-comments/index.html
@@ -11,9 +11,23 @@
 </head>
 <body>
 
-    <form id="form-container">
-        Name: Email: Comment: Receive email updates? Submit
+    <form action="#" method="post" id="form-container">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" class="espaciado-celdas"/><br>
+        <label for="email">Email</label>
+        <input type="email" id="mail" name="mail" class="espaciado-celdas"/><br>
+        <label for="comentario">Comment</label>
+        <input type="textarea" id="comentario" name="comentario" class="text-area espaciado-celdas"/><br>
+        <label for="updates?" class="italic">Recieve email updates?</label>
+        <input type="checkbox" id="updates" name="updates" class="espaciado-celdas-grande"/><br>
+        <input type="submit" value="Submit" class="submit"/>
+    
     </form>
 
+
+
+
+        Name: Email: Comment: Receive email updates? Submit
+   
 </body>
 </html>
